[package]
name = "tychosdk-disasm"
description = "TVM code disasm."
repository = "https://github.com/broxus/tychosdk-disasm"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.100"

everscale-types = { version = "0.1.2", default-features = false, features = [
    "sync",
    "serde",
    "base64",
] }
tycho-disasm = { git = "https://github.com/broxus/tycho-vm.git", rev = "616397f3ad4a2eab4a826a1d4383665cfd6e2f6d" }
