[package]
name = "tychosdk-disasm"
description = "TVM code disasm."
repository = "https://github.com/broxus/tychosdk-disasm"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
omit-default-module-path = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.100"

tycho-types = { version = "0.2.1", default-features = false, features = [
    "sync",
    "serde",
    "base64",
] }
tycho-disasm = { git = "https://github.com/broxus/tycho-vm.git", rev = "53f1e8b55b85f21fd42148a738d72292fbd9a839" }
